--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@inertiajs/react": "^1.2.0",
+    "@remixicon/react": "^4.5.0",
     "classnames": "^2.5.1",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
