--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@inertiajs/react": "^1.2.0",
     "@remixicon/react": "^4.5.0",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
