--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "twemoji": "^14.0.2",
     "ziggy-js": "^2.4.1"
   },
   "prettier": {
